--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@shopify/restyle": "^2.4.4",
     "expo": "~51.0.28",
     "expo-status-bar": "~1.12.1",
+    "firebase": "^10.14.1",
     "react": "18.2.0",
     "react-hook-form": "^7.53.0",
     "react-native": "0.74.5",
